--- a/index.html
+++ b/index.html
@@ -952,12 +952,81 @@
             margin-top: 2rem;
         }
 
+        /* Value Proposition Section */
+        .value-prop-highlight {
+            background: linear-gradient(145deg, #2a3546, #1a2333);
+            border: 1px solid var(--border-color);
+            border-radius: 12px;
+            padding: 2.5rem;
+            margin: 0 auto 3rem auto;
+            text-align: center;
+            max-width: 1100px;
+        }
+        .value-prop-highlight h2 {
+            color: var(--text-heading-color);
+            font-size: 1.8rem;
+            margin-top: 0;
+        }
+        .value-prop-highlight .sizzle-text {
+            color: var(--text-light-color);
+            max-width: 700px;
+            margin: 0.5rem auto 2.5rem auto;
+            line-height: 1.6;
+        }
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 1.5rem;
+            text-align: left;
+        }
+        .feature-card {
+            background-color: var(--surface-color);
+            padding: 1.5rem;
+            border-radius: 8px;
+            border: 1px solid var(--border-color);
+        }
+        .feature-icon {
+            width: 48px;
+            height: 48px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: rgba(59, 130, 246, 0.1);
+            border-radius: 8px;
+            margin-bottom: 1rem;
+        }
+        .feature-icon svg {
+            width: 24px;
+            height: 24px;
+            color: var(--primary-color);
+        }
+        .feature-card h3 {
+            color: var(--text-heading-color);
+            margin: 0 0 0.5rem 0;
+            font-size: 1.1rem;
+        }
+        .feature-card p {
+            color: var(--text-light-color);
+            margin: 0;
+            font-size: 0.95rem;
+            line-height: 1.5;
+        }
+
 
         @media (max-width: 1024px) {
             .review-layout, .content-hub-layout { grid-template-columns: 1fr; }
             .content-hub-sidebar {
                 position: static;
                 max-height: 50vh;
+            }
+        }
+
+        @media (max-width: 860px) {
+            .features-grid {
+                grid-template-columns: 1fr;
+            }
+            .value-prop-highlight {
+                padding: 1.5rem;
             }
         }
 
