--- a/index.html
+++ b/index.html
@@ -97,29 +97,54 @@
             display: flex;
             align-items: center;
             gap: 1.5rem;
-            background: linear-gradient(90deg, #2563eb, #3b82f6);
+            /* New vibrant gradient */
+            background: linear-gradient(95deg, #8B5CF6, #D946EF);
             color: white;
             padding: 1.5rem 2rem;
-            border-radius: 12px;
+            border-radius: 14px; /* Slightly more rounded */
             text-decoration: none;
             margin: 0 auto 3rem auto;
             max-width: 1100px;
-            transition: all 0.3s ease-in-out;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.2), 0 0 0 1px rgba(255, 255, 255, 0.1) inset;
+            transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+            /* Updated shadow and subtle border */
+            box-shadow: 0 8px 16px rgba(0,0,0,0.25);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            position: relative;
+            overflow: hidden; /* For shimmer effect */
+        }
+        /* Shimmer effect on hover */
+        .promo-banner::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 50%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transform: skewX(-25deg);
+            transition: left 0.6s ease;
+        }
+        .promo-banner:hover::after {
+            left: 150%;
         }
         .promo-banner:hover {
-            transform: translateY(-5px) scale(1.02);
-            box-shadow: 0 15px 30px rgba(59, 130, 246, 0.3);
+            transform: translateY(-5px) scale(1.01);
+            /* Brighter glow effect */
+            box-shadow: 0 12px 24px rgba(217, 70, 239, 0.3);
         }
         .promo-banner-icon {
             flex-shrink: 0;
             width: 48px;
             height: 48px;
             background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 50%;
+            border-radius: 12px; /* Rounded square */
             display: flex;
             align-items: center;
             justify-content: center;
+            transition: transform 0.3s ease;
+        }
+        .promo-banner:hover .promo-banner-icon {
+            transform: rotate(10deg) scale(1.1);
         }
         .promo-banner-icon svg {
             width: 28px;
@@ -131,21 +156,22 @@
         }
         .promo-banner-text strong {
             display: block;
-            font-size: 1.25rem;
+            font-size: 1.3rem; /* Slightly larger */
             font-weight: 700;
             margin-bottom: 0.25rem;
+            line-height: 1.3;
         }
         .promo-banner-text span {
-            font-size: 1rem;
+            font-size: 1.05rem; /* Slightly larger */
             opacity: 0.9;
         }
         .promo-banner-cta {
-            font-size: 2rem;
+            font-size: 2.2rem; /* Larger */
             font-weight: 300;
-            transition: transform 0.2s ease;
+            transition: transform 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
         }
         .promo-banner:hover .promo-banner-cta {
-            transform: translateX(5px);
+            transform: translateX(8px); /* Move a bit more */
         }
         .progress-bar {
             display: flex;
