--- a/index.html
+++ b/index.html
@@ -341,6 +341,9 @@
             width: 100%;
             border-collapse: collapse;
         }
+        .posts-card-view {
+            display: none;
+        }
         .posts-table th, .posts-table td {
             padding: 1rem;
             text-align: left;
